update responsive code

--- a/project5/index.html
+++ b/project5/index.html
@@ -149,28 +149,28 @@
             </p>
         </div>
     <div class="grid gap-4 grid-cols-2 md:grid-cols-4 p-6 lg:w-2/3">
-        <div class="flex items-center justify-center rounded-sm bg-[#18181B] p-16 md:px-10 md:py-20 ">
+        <div class="flex items-center justify-center rounded-sm bg-[#18181B] p-10 md:p-16 md:px-10 md:py-20 ">
             <img src="images/client 1.png" alt="" srcset="">
         </div>
-        <div class="flex items-center justify-center rounded-sm  bg-[#18181B] p-16 md:px-10 md:py-20">
+        <div class="flex items-center justify-center rounded-sm  bg-[#18181B] p-10 md:p-16  md:px-10 md:py-20">
             <img src="images/client 2.png" alt="" srcset="">
         </div>
-        <div class="flex items-center justify-center rounded-sm  bg-[#18181B] p-16 md:px-10 md:py-20">
+        <div class="flex items-center justify-center rounded-sm  bg-[#18181B] p-10 md:p-16 md:px-10 md:py-20">
             <img src="images/client 3.png" alt="" srcset="">
         </div>
-        <div class="flex items-center justify-center rounded-sm  bg-[#18181B] p-16 md:px-10 md:py-20">
+        <div class="flex items-center justify-center rounded-sm  bg-[#18181B] p-10 md:p-16  md:px-10 md:py-20">
             <img src="images/client 4.png" alt="" srcset="">
         </div>
-        <div class="flex items-center justify-center rounded-sm  bg-[#18181B] p-16 md:px-10 md:py-20">
+        <div class="flex items-center justify-center rounded-sm  bg-[#18181B] p-10 md:p-16  md:px-10 md:py-20">
             <img src="images/client 5.png" alt="" srcset="">
         </div>
-        <div class="flex items-center justify-center rounded-sm  bg-[#18181B] p-16 md:px-10 md:py-20">
+        <div class="flex items-center justify-center rounded-sm  bg-[#18181B] p-10 md:p-16  md:px-10 md:py-20">
             <img src="images/client 6.png" alt="" srcset="">
         </div>
-        <div class="flex items-center justify-center rounded-sm  bg-[#18181B] p-16 md:px-10 md:py-20">
+        <div class="flex items-center justify-center rounded-sm  bg-[#18181B]  p-10 md:p-16  md:px-10 md:py-20">
             <img src="images/client 7.png" alt="" srcset="">
         </div>
-        <div class="flex items-center justify-center rounded-sm  bg-[#18181B] p-16 md:px-10 md:py-20">
+        <div class="flex items-center justify-center rounded-sm  bg-[#18181B] p-10 md:p-16  md:px-10 md:py-20">
             <img src="images/client 8.png" alt="" srcset="">
         </div>
 
